# document_rag

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pytest.ini
backend/: .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/scripts/: init_llama.sh  run_llm.sh
backend/services/embedding/: Dockerfile  requirements.txt
backend/services/embedding/app/: __init__.py  main.py
backend/services/gateway/: Dockerfile  package-lock.json  package.json
backend/services/gateway/src/: app.ts  config.ts  index.ts  openapi.ts
backend/services/gateway/test/: gateway.test.ts
backend/services/ingestion/: Dockerfile  requirements.txt
backend/services/ingestion/app/: __init__.py  main.py
backend/services/ml/: Dockerfile  __init__.py  requirements.txt
backend/services/ml/app/: main.py
backend/services/rag/: Dockerfile  requirements.txt
backend/services/retrieval/: Dockerfile  requirements.txt
backend/services/safeguard/: __init__.py  base.py  basic_guard.py  factory.py
backend/shared/: __init__.py  chunker.py  contracts.py  pdf_parser.py  prompt_builder.py  safeguard_constants.py
backend/shared/query_rewriter/: __init__.py  base.py  factory.py  llm_rewriter.py
backend/shared/reranker/: __init__.py  base.py  bge_reranker.py  factory.py
backend/tests/: conftest.py  test_chunker.py  test_embedding.py  test_ml_service.py  test_prompt_builder.py  test_rag_langchain_smoke.py  test_rag_rerank_chunks.py  test_reranker.py  test_safeguard.py
docs/: ARTICLE.md  (+11 more)
(+55 files in other folders)
