[project]
name = "document-rag-backend"
version = "0.1.0"
description = "Document RAG backend services"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["."]
exclude = ["venv", ".venv", "__pycache__", "*.egg-info", ".eggs"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["B008", "B904"]

[tool.ruff.format]
quote-style = "double"
